# biosim_inf200

./: .gitignore  README.md  setup.cfg  tox.ini
docs/: about_us.rst  conf.py  formulas.rst  images.rst  index.rst  mapmakers_guide.rst  modules.rst  possibilites.rst  readme.rst  structure_overview.rst
examples/: check_sim.py  checkerboard_sim.py  mono_hc.py  mono_ho.py  premium_sim.py  sample_sim.py
src/biosim/: __init__.py  animals.py  biome.py  graphics.py  island.py  math_funcs.py  simulation.py
tests/: test_animals.py  test_biome.py  test_biosim_interface.py  test_island.py  test_math_funcs.py
